@@ -1,6 +1,7 @@
 import { Component } from '@angular/core';
 import { mock_product_list } from './browse/mock_product_list';
 import { ProductItemModel } from './browse/product-item.model';
+import { category_list } from './browse/category_list';
 
 @Component({
   selector: 'app-root',
@@ -10,6 +11,7 @@ import { ProductItemModel } from './browse/product-item.model';
 export class AppComponent {
   title = 'apple-music';
   products: ProductItemModel [] = [];
+  category_list: any = category_list;
 
   constructor () {
     // put some code to fethc data from backend using htp
@@ -19,5 +21,6 @@ export class AppComponent {
       this.products.push(product);
     }
 
+    this.category_list = category_list;
   }
 }
