@@ -1,0 +1,14 @@
+export const category_list = [
+    {
+        title: "Apple Music Country"
+    },
+
+    {
+        title: "Apple Music 1"
+    },
+
+    {
+        title: "Apple Music Hits"
+    }
+
+]
