@@ -1,9 +1,9 @@
 <div class="card">
   <li class="nav-item" a href ="">
-      <img class="card-img-top" src="/assets/country.webp" alt="">
+      <img class="card-img-top" src={{img}} alt="">
       <div class="card-body">
-          <h5 class="card-title">Apple Music Country</h5>
-          <p class="card-text">2 Chainz</p>
+          <h5 class="card-title">{{title}}</h5>
+          <p class="card-text">{{description}}</p>
       </div>
   </li>
 </div>
