@@ -1,4 +1,4 @@
-import { Component } from "@angular/core";
+import { Component, Input } from "@angular/core";
 @Component ({
     selector: "am-horizontal-card",
     templateUrl: "horizontal.card.component.html",
@@ -6,5 +6,13 @@ import { Component } from "@angular/core";
 })
 
 export class HorizontalCardComponent {
-    
+    @Input() img: string;
+    @Input() title: string;
+    @Input() description: string;
+
+    constructor() {
+        this.img = ""
+        this.title = "Title"
+        this.description = "Description"
+    }
 }
