@@ -1,7 +1,7 @@
 <div class = "row">
   <div class="card">
     <li class="nav-item" a href ="">
-        <img class="card-img-top" src = "./assets/2 chainz.webp" alt="">
+        <img class="card-img-top" src ={{img}} alt="">
         <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
             <p class="card-text">{{description}}</p>
